Mungo 1.1 -- 13/02/2009

	Name changed from Mungo to CGI::Mungo

Mungo 1.0 -- 13/02/2009

	Initial Release